objects/Trigger_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                    <default>true</default>
                    <label>Before</label>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                    <default>true</default>
                    <label>Insert</label>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Undelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementing_Class__c</fullName>
        <label>Implementing Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_of_Execution__c</fullName>
        <label>Order of Execution</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Types_API_Names__c</fullName>
        <label>Record Types API Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trigger Configuration</label>
    <pluralLabel>Trigger Configurations</pluralLabel>
    <listViews>
        <fullName>Active_Opportunity_Triggers</fullName>
        <columns>MasterLabel</columns>
        <columns>Implementing_Class__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Order_of_Execution__c</columns>
        <columns>Record_Types_API_Names__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Opportunity Triggers</label>
    </listViews>
</CustomObject>